--- a/AdminSvc/App.config
+++ b/AdminSvc/App.config
@@ -11,31 +11,35 @@
       <service name="AdminSvc.ManageTopic" behaviorConfiguration="StandardBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="net.pipe://localhost/Services"/>
+            <add baseAddress="http://localhost:3700/Service/ManageTopic"/>
           </baseAddresses>
         </host>
-        <endpoint address="ManageTopic" binding="netNamedPipeBinding" contract="SvcInterfaces.IManageTopic" />
+        <endpoint address="" binding="basicHttpBinding" contract="SvcInterfaces.IManageTopic" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
       <service name="AdminSvc.ManageUser" behaviorConfiguration="StandardBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="net.pipe://localhost/Services"/>
+            <add baseAddress="http://localhost:3700/Service/ManageUser"/>
           </baseAddresses>
         </host>
-        <endpoint address="ManageUser" binding="netNamedPipeBinding" contract="SvcInterfaces.IManageUser" />
+        <endpoint address="" binding="basicHttpBinding" contract="SvcInterfaces.IManageUser" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
       <service name="AdminSvc.RunReport" behaviorConfiguration="StandardBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="net.pipe://localhost/Services"/>
+            <add baseAddress="http://localhost:3700/Service/RunReport" />
           </baseAddresses>
         </host>
-        <endpoint address="RunReport" binding="netNamedPipeBinding" contract="SvcInterfaces.IRunReport" />
+        <endpoint address="" binding="basicHttpBinding" contract="SvcInterfaces.IRunReport" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="StandardBehavior">
+          <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
         </behavior>
       </serviceBehaviors>
