--- a/SvcInterfaces/SvcInterfaces.csproj
+++ b/SvcInterfaces/SvcInterfaces.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IManageUser.cs" />
     <Compile Include="IRunReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransportObjects.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
