--- a/AdminSvc/App.config
+++ b/AdminSvc/App.config
@@ -7,7 +7,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="DevConnecton" connectionString="Data Source=JBUCK-WIN10;Initial Catalog=DB-dev;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="DevConnecton" connectionString="Data Source=JBUCK-WIN10;Initial Catalog=DB-dev;User Id=Sample;Password=RedSox" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.serviceModel>
     <services>
